nu med class på oel

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div id="game_background"></div>
 
             <div id="game_elements">
-                <div id="oel"></div>
+                <div id="oel" class="figur"></div>
                 <div id="saft"></div>
                 <div id="kaffe"></div>
                 <div id="oel2"></div>
