--- a/index.html
+++ b/index.html
@@ -11,45 +11,48 @@
 <body>
     <!--    <script src=""></script>-->
     <div id="screen">
-        <div id="menu_background">
-            <div id="play"></div>
-            <div id="set"></div>
+        <div id="menu_background" class="hide">
+            <div id="play" class="shake" class="hide"></div>
+            <div id="set" class="hide"></div>
         </div>
         <div id="game">
             <div id="game_background"></div>
 
             <div id="game_elements">
-                <div id="oel" class="figur"></div>
-                <div id="saft"></div>
-                <div id="kaffe"></div>
-                <div id="oel2"></div>
-                <div id="saft2"></div>
-                <div id="kaffe2"></div>
-                <div id="oel3"></div>
-                <div id="oel4"></div>
-                <div id="oel5"></div>
+                <div id="oel" class="fade_out" class="fade_in"></div>
+                <div id="saft" class="fade_out" class="fade_in"></div>
+                <div id="kaffe" class="fade_out" class="fade_in"></div>
+                <div id="oel2" class="fade_out" class="fade_in"></div>
+                <div id="saft2" class="fade_out" class="fade_in"></div>
+                <div id="kaffe2" class="fade_out" class="fade_in"></div>
+                <div id="oel3" class="fade_out" class="fade_in"></div>
+                <div id="oel4" class="fade_out" class="fade_in"></div>
+                <div id="oel5" class="fade_out" class="fade_in"></div>
             </div>
 
             <div id="game_ui">
                 <div id="points"></div>
-                <div id="energy"></div>
+                <div id="energy">
+                    <div id="livrod"></div>
+                    <div id="livsort"></div>
+                </div>
                 <div id="time"></div>
             </div>
         </div>
-        <div id="start">
+        <div id="start" class="hide">
             <div id="play2"></div>
         </div>
-        <div id="settings">
+        <div id="settings" class="hide">
             <div id="on"></div>
             <div id="off"></div>
             <div id="kryds"></div>
         </div>
-        <div id="gameover">
+        <div id="gameover" class="hide">
             <div id="kryds"></div>
             <div id="spiligen"></div>
             <div id="hus"></div>
         </div>
-        <div id="levelcomplete">
+        <div id="levelcomplete" class="hide">
             <div id="kryds"></div>
             <div id="spiligen"></div>
             <div id="hus"></div>
