--- a/index.html
+++ b/index.html
@@ -9,25 +9,22 @@
 </head>
 
 <body>
-    <!--    <script src=""></script>-->
     <div id="screen">
         <div id="menu_background" class="hide">
-            <div id="play" class="shake" class="hide"></div>
-            <div id="set" class="hide"></div>
         </div>
         <div id="game">
             <div id="game_background"></div>
 
             <div id="game_elements">
-                <div id="oel" class="fade_out" class="fade_in"></div>
-                <div id="saft" class="fade_out" class="fade_in"></div>
-                <div id="kaffe" class="fade_out" class="fade_in"></div>
-                <div id="oel2" class="fade_out" class="fade_in"></div>
-                <div id="saft2" class="fade_out" class="fade_in"></div>
-                <div id="kaffe2" class="fade_out" class="fade_in"></div>
-                <div id="oel3" class="fade_out" class="fade_in"></div>
-                <div id="oel4" class="fade_out" class="fade_in"></div>
-                <div id="oel5" class="fade_out" class="fade_in"></div>
+                <div id="oel" class="fade_out" "fade_in"></div>
+                <div id="saft" class="fade_out" "fade_in"></div>
+                <div id="kaffe" class="fade_out" "fade_in"></div>
+                <div id="oel2" class="fade_out" "fade_in"></div>
+                <div id="saft2" class="fade_out" "fade_in"></div>
+                <div id="kaffe2" class="fade_out" "fade_in"></div>
+                <div id="oel3" class="fade_out" "fade_in"></div>
+                <div id="oel4" class="fade_out" "fade_in"></div>
+                <div id="oel5" class="fade_out" "fade_in"></div>
             </div>
 
             <div id="game_ui">
@@ -40,7 +37,8 @@
             </div>
         </div>
         <div id="start" class="hide">
-            <div id="play2"></div>
+            <div id="play" class="shake"></div>
+
         </div>
         <div id="settings" class="hide">
             <div id="on"></div>
@@ -57,7 +55,9 @@
             <div id="spiligen"></div>
             <div id="hus"></div>
         </div>
+        <div id="set"></div>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
