--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             </div>
 
             <div id="game_ui">
-                <div id="points"></div>
+                <div id="points">
+                    <div id="point"></div>
+                </div>
                 <div id="energy">
                     <div id="livrod"></div>
                     <div id="livsort"></div>
@@ -36,7 +38,7 @@
                 <div id="time"></div>
             </div>
         </div>
-        <div id="start" class="hide">
+        <div id="start" class="hide" "fade_out">
             <div id="play" class="shake"></div>
 
         </div>
