positioner og classer

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
             <div id="game_background"></div>
 
             <div id="game_elements">
-                <div id="oel" class="fade_out" "fade_in"></div>
-                <div id="saft" class="fade_out" "fade_in"></div>
-                <div id="kaffe" class="fade_out" "fade_in"></div>
-                <div id="oel2" class="fade_out" "fade_in"></div>
-                <div id="saft2" class="fade_out" "fade_in"></div>
-                <div id="kaffe2" class="fade_out" "fade_in"></div>
-                <div id="oel3" class="fade_out" "fade_in"></div>
-                <div id="oel4" class="fade_out" "fade_in"></div>
-                <div id="oel5" class="fade_out" "fade_in"></div>
+                <div id="drink1" class="pos1 type1 fade_out"></div>
+                <div id="drink2" class="pos2 type1 fade_out"></div>
+                <div id="drink3" class="pos3 type1 fade_out"></div>
+                <div id="drink4" class="pos4"></div>
+                <div id="drink5" class="pos5"></div>
+                <div id="drink6"></div>
+                <div id="drink7"></div>
+                <div id="drink8"></div>
+                <div id="drink9"></div>
             </div>
 
             <div id="game_ui">
